--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-gitcharts
+gitcharts v 0.1
+
+What in next versions? More customization and more optimization.
+
+Example screenshot: http://dabroz.scythe.pl/upload/2010/01/chart.png
