--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-gitcharts v 0.1
+<h1>gitcharts v 0.1</h1>
 
-What in next versions? More customization and more optimization.
+<p>What in next versions? More customization and more optimization.</p>
 
-Example screenshot: http://dabroz.scythe.pl/upload/2010/01/chart.png
+<p>Example screenshot:</p>
+<p><a href="http://dabroz.scythe.pl/upload/2010/01/chart.png"><img src="http://dabroz.scythe.pl/upload/2010/01/chart.jpg" alt="gitcharts" /></a></p>
