--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-<h1>gitcharts v 0.1</h1>
+gitcharts v 0.1
+===============
 
-<p>What in next versions? More customization and more optimization.</p>
+What in next versions? More customization and more optimization.
 
-<p>Example screenshot:</p>
-<p><a href="http://dabroz.scythe.pl/upload/2010/01/chart.png"><img src="http://dabroz.scythe.pl/upload/2010/01/chart.jpg" alt="gitcharts" /></a></p>
+Example screenshot:
+
+[![Screenshot](http://dabroz.scythe.pl/upload/2010/01/chart.jpg)](http://dabroz.scythe.pl/upload/2010/01/chart.png) 
